apps/base/tool-olivetin/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olivetin
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: olivetin
      app.kubernetes.io/component: olivetin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: olivetin
        app.kubernetes.io/component: olivetin
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # olivetin
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: olivetin
        image: "registry.lan/olivetin:2024.07.153-amd64-custom"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1337
          name: http
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: http
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 35m
            memory: 32Mi
          limits:
            cpu: 75m
            memory: 32Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: olivetin-config
          mountPath: /config/config.yaml
          subPath: config.yaml
        - name: olivetin-config
          mountPath: /config/images.csv
          subPath: images.csv
        - name: images-volume
          mountPath: /var/www/olivetin/customIcons
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: olivetin-config
        configMap:
          name: olivetin-config
      - name: images-volume
        emptyDir: {}
      nodeSelector:
        capability/general-purpose: 'yes'
